address reivew comments